# Acmp

./: Acmp.sln  README.md
CSharp/: Acmp.sln
CSharp/TasksApp/: Program.cs  TasksApp.csproj
CSharp/TasksApp.Test/: TasksApp.Test.csproj  packages.config
CSharp/TasksApp.Test/Properties/: AssemblyInfo.cs
CSharp/TasksApp.Test/Tests/: Task0001Test.cs  Task0002Test.cs  Task0003Test.cs  Task0004Test.cs  Task0005Test.cs  (+165 more)
Cpp/: .gitignore  CMakeLists.txt  INFO.md  README.md  common.cmake
Cpp/Task/: main.cpp  solution.h
Cpp/Task/task_0082/: Readme.md  solution.cpp
Cpp/Task/task_0108/: solution.cpp
Cpp/Task/task_0337/: Readme.md  solution.cpp
Cpp/Task/task_0685/: Readme.md  solution.cpp
Cpp/Task/task_0907/: solution.cpp
Cpp/Test/: test_0082.cpp  test_0337.cpp
Cpp/Test/common/: main.cpp  test.h
Cpp/Test/libTesting/: CMakeLists.txt  README.md  testing.cpp  testing.h
Cpp/task_0108/: CMakeLists.txt  Readme.md  main.cpp
Cpp/task_0337/: CMakeLists.txt  main.cpp
Cpp/task_0337/src/: main.cpp
Cpp/task_0685/: CMakeLists.txt  main.cpp
Cpp/task_0907/: CMakeLists.txt  Readme.md  main.cpp
TasksApp/: Program.cs  TasksApp.csproj
TasksApp.Test/: TasksApp.Test.csproj
TasksApp.Test/Properties/: AssemblyInfo.cs
TasksApp.Test/Tests/: Task0001Test.cs  Task0002Test.cs  Task0003Test.cs  Task0005Test.cs  Task0006Test.cs  Task0008Test.cs  Task0010Test.cs  Task0325Test.cs
TasksApp/Properties/: AssemblyInfo.cs
TasksApp/Tasks/: Task0001.cs  Task0002.cs  Task0003.cs  Task0004.cs  Task0005.cs  Task0006.cs  Task0007.cs  Task0008.cs  Task0009.cs  Task0337.cs
(+171 files in other folders)
